force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>This object is created for QES Unity Customer Portal. It will have the details of the Applications and will have many to many relationship with Custom Object  Hardware Platform Product.</description>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>