force-app/main/default/objects/Application__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field will contain the details of the Record and that data will be displayed QES Unity Customer Portal Site for Users.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>