force-app/main/default/objects/Application__c/fields/Downloads_URL__c.field-meta.xml
<CustomField>
    <fullName>Downloads_URL__c</fullName>
    <description>This will contain the URL for Downloads of particular product.</description>
    <label>Downloads URL</label>
    <type>Url</type>
</CustomField>