force-app/main/default/objects/Application__c/fields/Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Ordinal__c</fullName>
    <description>This is the rank of the App among the ones being displayed on the Left Rail on the Support Page of the QES Unity Portal</description>
    <inlineHelpText>This is the rank of the Application among the ones being displayed on the Left Rail on the Support Page</inlineHelpText>
    <label>Ordinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>