force-app/main/default/objects/Application__c/fields/Parent_App__c.field-meta.xml
<CustomField>
    <fullName>Parent_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent App</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>