force-app/main/default/objects/Application__c/fields/SuperLinks_Article_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>SuperLinks_Article_Group_Id__c</fullName>
    <description>SuperLinks Article Group Id</description>
    <label>SuperLinks Article Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>