force-app/main/default/objects/Application__c/fields/SuperLinks_Document_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>SuperLinks_Document_Group_Id__c</fullName>
    <label>SuperLinks Document Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>