force-app/main/default/objects/Application__c/fields/SuperLinks_Training_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>SuperLinks_Training_Group_Id__c</fullName>
    <description>SuperLinks Training Group Id</description>
    <label>SuperLinks Training Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>