force-app/main/default/objects/Application__c/fields/Technical_Specification_URL__c.field-meta.xml
<CustomField>
    <fullName>Technical_Specification_URL__c</fullName>
    <description>This will contain the URL for Technical Specification Documents of particular product.</description>
    <label>Technical Specification URL</label>
    <type>Url</type>
</CustomField>