force-app/main/default/objects/Application__c/fields/User_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>User_Guide_URL__c</fullName>
    <description>This will contain the URL for USER GUIDE of particular product.</description>
    <label>User Guide URL</label>
    <type>Url</type>
</CustomField>