force-app/main/default/objects/Application__c/validationRules/Ordinal_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Ordinal_Required</fullName>
    <active>true</active>
    <description>Checks whether the Ordinal has a value if &quot;Display on Left Rail as a Link&quot; is selected</description>
    <errorConditionFormula>Display_on_Left_Rail_as_Link__c =  true &amp;&amp;  ISBLANK(Ordinal__c)</errorConditionFormula>
    <errorDisplayField>Ordinal__c</errorDisplayField>
    <errorMessage>Ordinal cannot be blank if &quot;Display On Left Rail as Link&quot; is Checked</errorMessage>
</ValidationRule>